2018-08-16  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_kb09.m: Update unit tests

	* examples/01_kriging_basics/stk_example_kb09.m: Update unit
	tests, which still referred to the old HOMOSCEDASTIC_NOISE variable.

2018-07-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Introduce exceptions to the way missing lnv is handled

	* param/estim/stk_param_init.m: Considers that lnv is nan, instead
	of -Inf as everywhere else, in case of missing lnv field if lnv
	estimation is explicitely requested.
	* param/estim/stk_param_init_lnv.m: Considers that lnv is nan in
	case of missing lnv field.

	stk_param_init_lnv.m: Experimental support for noise model objects

	* param/estim/stk_param_init_lnv.m: Introduce experimental support
	for noise model objects.
	* param/estim/stk_param_estim.m: Let stk_param_init_lnv hande the
	object case.

2018-07-24  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init.m: Errors out if the first arg is not a structure

	* param/estim/stk_param_init.m: Errors out if the first argument
	is not a structure, since we expect a model structure here.

	stk_param_estim.m: Fix recently introduced error

	* param/estim/stk_param_estim.m (provide_starting_point): Fix
	recently introduced error in subfunction provide_starting_point.
	Went unnoticed because this section is not covered by unit
	tests...

	stk_param_init_lnv.m: Errors out for noiseless models

	* param/estim/stk_param_init_lnv.m: Errors out if called for a
	noiseless model.

2018-07-23  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_check_lnv0.m: Fix a bug.

	* param/estim/private/stk_param_check_lnv0.m: Fix a bug.

	stk_runtests.m: Improve the function in various ways

	* misc/test/stk_runtests.m: Improve the function in various ways.
	First, make it possible to run all the tests in a given set of
	directories.  Second, display runtime for each directory.  Third,
	use the internal function stk_runtests_ both in Matlab and in